--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,7 @@
 body {
   text-align: center;
   /*padding: 70px 50px;*/
-  background: #0D1A29;
+  /*background: #0D1A29;*/
   font-family: "Helvetica Neue", "Open Sans", helvetica, arial, sans-serif;
 }
 #timer {
