Changed to portuguese

--- a/public/views/index.html
+++ b/public/views/index.html
@@ -25,9 +25,9 @@
                 s = secs - mins * 60;
 
                 if (days < 0) {
-                    document.getElementById("timer").innerHTML = '<div>' + 0 + '<span>days</span></div><div>' + 0 + '<span>hours</span></div><div>' + 0 + '<span>minutes</span></div><div>' + 0 + '<span>seconds</span></div>';
+                    document.getElementById("timer").innerHTML = '<div>' + 0 + '<span>dias</span></div><div>' + 0 + '<span>horas</span></div><div>' + 0 + '<span>minutos</span></div><div>' + 0 + '<span>segundos</span></div>';
                 } else {
-                    document.getElementById("timer").innerHTML = '<div>' + d + '<span>days</span></div><div>' + h + '<span>hours</span></div><div>' + m + '<span>minutes</span></div><div>' + s + '<span>seconds</span></div>';
+                    document.getElementById("timer").innerHTML = '<div>' + d + '<span>dias</span></div><div>' + h + '<span>horas</span></div><div>' + m + '<span>minutos</span></div><div>' + s + '<span>segundos</span></div>';
                 }
 
             }
